Fix font size on small screens

--- a/src/scss/components/_product-card.scss
+++ b/src/scss/components/_product-card.scss
@@ -36,6 +36,7 @@
   }
 
   &__price {
+    font-size: 24px;
     margin-bottom: 24px;
   }
 
@@ -43,5 +44,9 @@
     width: 100%;
     margin-top: auto;
     padding: 16px 24px;
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 }
